# moralis-streams-client

./: .bumpversion.cfg  .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-docs.txt  requirements.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  cli.rst  conf.py  index.rst  installation.rst  make.bat  modules.rst  moralis_streams_client.models.rst  moralis_streams_client.rst  readme.rst
make.include/: common.mk  lint.mk  test.mk  version.mk
moralis_streams_client/: __init__.py  api.py  app.py  auth.py  cli.py  content_size_limit.py  defaults.py  event_queue.py  exception_handler.py  exceptions.py  logconfig.py  server.py  settings.py  signature.py  tunnel.py  validate.py  version.py  webhook.py  webhook_cli.py
moralis_streams_client/models/: Partial_streamsTypes.py  __init__.py  addressesTypes.py  historyTypes.py  model.py  settingsTypes.py  statsTypes.py  streamTypes.py  streamsTypes.py  webhookTypes.py
moralis_streams_client/streams_api_client/: __init__.py  client.py  types.py
moralis_streams_client/streams_api_client/api/beta/: get_stats.py
moralis_streams_client/streams_api_client/api/evm_streams/: add_address_to_stream.py  create_stream.py  delete_address_from_stream.py  delete_stream.py  get_addresses.py  get_stream.py  get_streams.py  update_stream.py  update_stream_status.py
moralis_streams_client/streams_api_client/api/history/: get_history.py  replay_history.py
moralis_streams_client/streams_api_client/api/project/: get_settings.py  set_settings.py
moralis_streams_client/streams_api_client/models/: __init__.py  abi_type.py  addresses.py  addresses_types_address_response.py  addresses_types_addresses_add.py  addresses_types_addresses_remove.py  addresses_types_addresses_response.py  addresses_types_delete_address_response.py  block.py  ierc20_approval.py  ierc20_transfer.py  inft_approval.py  inft_approval_erc1155.py  inft_approval_erc721.py  inft_transfer.py  internal_transaction.py  log.py  partial_streams_types_streams_model_create.py  settings_region.py  settings_types_settings_model.py  state_mutability_type.py  stats_types_stats_model.py  streams_abi.py  streams_filter.py  streams_model.py  streams_status.py  streams_type.py  streams_types_streams_model.py  streams_types_streams_model_create.py  streams_types_streams_response.py  streams_types_streams_status_update.py  transaction.py
scripts/: generate-models  postprocess-model  watch-procs
tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_examples.py  test_fixtures.py  test_relay.py  test_sdk.py  test_server.py  test_signature.py  test_webhook.py  test_webhooks.py
