[build-system]
requires = ["flit_core >=3.2,<4", "eth-utils"]
build-backend = "flit_core.buildapi"
requires_python = ">=3.10"



[project]
name = "moralis-streams-client"
authors = [{name = "Matt Krueger", email = "mkrueger@rstms.net"}]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
keywords = ["moralis_streams_client"]
classifiers = [
  "Intended Audience :: Developers",

  "Natural Language :: English", 
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10"
]

dynamic = ["version", "description"]

dependencies = [
  "click",
  "eth-hash[pycryptodome]",
  "eth-utils",
  "FastAPI",
  "orjson",
  "psutil",
  "pydantic",
  "pyngrok",
  "requests",
  "starlette",
  "toml",
  "uvicorn",
]

[tool.flit.module]
name = "moralis_streams_client"

[project.optional-dependencies]
dev = [
  "ape-apeman",
  "backoff",
  "black",
  "bump2version",
  "coverage",
  "eth-account",
  "MoralisSDK",
  "flake8",
  "flake8-length",
  "isort",
  "pytest",
  "pytest-datadir",
  "python-box",
  "ratelimit",
  "tox"
]
docs = [
  "m2r2",
  "sphinx",
  "sphinx-click",
  "sphinx-rtd-theme"
]

[project.urls]
Home = "https://github.com/rstms/moralis_streams_client"
[tool.black]
line-length = 79

[tool.isort]
profile = "black"
[tool.pytest]
collect_ignore = ['setup.py']


[project.scripts]
msc = "moralis_streams_client.cli:cli"
webhook = "moralis_streams_client.webhook_cli:webhook"


